# lwshell

./: AUTHORS  CHANGELOG.md  CMakeLists.txt  README.md  TODO.md  library.json
dev/: lwshell_dev.sln  lwshell_dev.vcxproj  lwshell_dev.vcxproj.filters  lwshell_opts.h  main.c
dev/VisualStudio/: lwshell_dev.vcxproj  lwshell_dev.vcxproj.filters  lwshell_opts.h  main.c
docs/: conf.py  doxyfile.doxy  index.rst
docs/api-reference/: index.rst  lwshell.rst  lwshell_opt.rst
docs/examples/: index.rst
docs/examples_src/: example_minimal.c
docs/get-started/: index.rst
docs/static/images/: logo.drawio
docs/user-manual/: how-it-works.rst
examples/: example_minimal.c
lwshell/: CMakeLists.txt  library.cmake
lwshell/src/include/lwshell/: lwshell.h  lwshell_opt.h  lwshell_opts_template.h
lwshell/src/lwshell/: lwshell.c
